--- a/package.json
+++ b/package.json
@@ -1,27 +1,11 @@
 {
   "name": "functional-programming",
   "version": "1.0.0",
-  "description": "",
-  "main": "gulpfile.js",
-  "dependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "babel-loader": "^8.2.3",
-    "browser-sync": "^2.27.5",
-    "camelcase": "^6.2.0",
-    "camelcase-keys": "^7.0.1",
-    "colornames": "^1.1.1",
-    "gulp": "^4.0.2",
-    "translate": "^1.4.0"
-  },
-  "devDependencies": {
-    "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1"
-  },
+  "description": "![Functional Programming](logbook/fp-logo.png)",
+  "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "start": "webpack serve --open"
+    "build": "webpack build",
+    "dev": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -33,5 +17,5 @@
   "bugs": {
     "url": "https://github.com/MelvinIdema/functional-programming/issues"
   },
-  "homepage": "https://github.com/MelvinIdema/functional-programming#readme"
+  "homepage": "https://github.com/MelvinIdema/functional-programming#readme",
 }
