--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
   "bugs": {
     "url": "https://github.com/MelvinIdema/functional-programming/issues"
   },
-  "homepage": "https://github.com/MelvinIdema/functional-programming#readme",
+  "homepage": "https://github.com/MelvinIdema/functional-programming#readme"
 }
